frontend/test/should_pass/basic_021.grg
rule r {
	x : Node;
	y : Node;
	negative {
		x --> y : Node;
	}

	modify {
	}
}

