frontend/test/should_fail/basic_007.grg
rule r {
  x:Node;
  negative {
    x:Node;
  }
  modify { }
}
